--- a/index.html
+++ b/index.html
@@ -4,53 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogadores de Futebol</title>
-    <style>
-        body { font-family: Arial, sans-serif; }
-        .container { max-width: 800px; margin: auto; }
-        .search { margin: 20px 0; }
-        .player { border: 1px solid #ccc; margin: 10px; padding: 10px; display: flex; }
-        .player img { width: 100px; height: 100px; margin-right: 10px; }
-        .details { display: none; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h1>Jogadores de Futebol</h1>
         <input type="text" id="search" class="search" placeholder="Buscar jogador...">
-        <div id="players">
-            <div class="player" onclick="toggleDetails(this)">
-                <img src="https://via.placeholder.com/100" alt="Jogador 1">
-                <div>
-                    <h2>Jogador 1</h2>
-                    <p class="details">Posição: Atacante<br>Clube: Time A</p>
-                </div>
-            </div>
-            <div class="player" onclick="toggleDetails(this)">
-                <img src="https://via.placeholder.com/100" alt="Jogador 2">
-                <div>
-                    <h2>Jogador 2</h2>
-                    <p class="details">Posição: Meio-campista<br>Clube: Time B</p>
-                </div>
-            </div>
-            <!-- Adicione mais jogadores aqui -->
-        </div>
+        <div class="players-grid" id="players"></div>
     </div>
 
-    <script>
-        function toggleDetails(element) {
-            const details = element.querySelector('.details');
-            details.style.display = details.style.display === 'none' ? 'block' : 'none';
-        }
-
-        document.getElementById('search').addEventListener('input', function() {
-            const query = this.value.toLowerCase();
-            const players = document.querySelectorAll('.player');
-
-            players.forEach(player => {
-                const name = player.querySelector('h2').innerText.toLowerCase();
-                player.style.display = name.includes(query) ? 'flex' : 'none';
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
