--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogadores de Futebol</title>
+    <title>Quiz de Futebol</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Jogadores de Futebol</h1>
-        <input type="text" id="search" class="search" placeholder="Buscar jogador...">
-        <div class="players-grid" id="players"></div>
+        <h1>Quiz de Futebol</h1>
+        <div id="quiz"></div>
+        <button id="submit">Enviar Respostas</button>
+        <div id="result"></div>
     </div>
 
     <script src="script.js"></script>
